// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PortfolioLinks/> Snapshot renders without crashing using mount 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > *:not(:last-child) {
  margin-right: 2em;
}

<HashRouter>
  <Router
    location={
      Object {
        "hash": "",
        "key": "default",
        "pathname": "/",
        "search": "",
        "state": null,
      }
    }
    navigationType="POP"
    navigator={
      Object {
        "action": "POP",
        "back": [Function],
        "block": [Function],
        "createHref": [Function],
        "forward": [Function],
        "go": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "default",
          "pathname": "/",
          "search": "",
          "state": null,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PortfolioLinks>
      <styled.div
        orientation="horizontal"
      >
        <div
          className="c0"
          orientation="horizontal"
        >
          <HashLink
            to="#about"
          >
            <Link
              onClick={[Function]}
              to="#about"
            >
              <a
                href="#/#about"
                onClick={[Function]}
              >
                button.about
              </a>
            </Link>
          </HashLink>
          <HashLink
            to="#skills"
          >
            <Link
              onClick={[Function]}
              to="#skills"
            >
              <a
                href="#/#skills"
                onClick={[Function]}
              >
                button.skills
              </a>
            </Link>
          </HashLink>
          <HashLink
            to="#experience"
          >
            <Link
              onClick={[Function]}
              to="#experience"
            >
              <a
                href="#/#experience"
                onClick={[Function]}
              >
                button.experience
              </a>
            </Link>
          </HashLink>
          <HashLink
            to="#contact"
          >
            <Link
              onClick={[Function]}
              to="#contact"
            >
              <a
                href="#/#contact"
                onClick={[Function]}
              >
                button.contact
              </a>
            </Link>
          </HashLink>
        </div>
      </styled.div>
    </PortfolioLinks>
  </Router>
</HashRouter>
`;

exports[`<PortfolioLinks/> Snapshot renders without crashing using render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > *:not(:last-child) {
  margin-right: 2em;
}

<div
  class="c0"
  orientation="horizontal"
>
  <a
    href="#/#about"
  >
    button.about
  </a>
  <a
    href="#/#skills"
  >
    button.skills
  </a>
  <a
    href="#/#experience"
  >
    button.experience
  </a>
  <a
    href="#/#contact"
  >
    button.contact
  </a>
</div>
`;

exports[`<PortfolioLinks/> Snapshot renders without crashing using shallow 1`] = `
<styled.div
  orientation="horizontal"
>
  <HashLink
    to="#about"
  >
    button.about
  </HashLink>
  <HashLink
    to="#skills"
  >
    button.skills
  </HashLink>
  <HashLink
    to="#experience"
  >
    button.experience
  </HashLink>
  <HashLink
    to="#contact"
  >
    button.contact
  </HashLink>
</styled.div>
`;
